monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0112/A0112a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0112;

grammar A0112a {

  Foo = "foo";

  interface Bar = "bar";

  Bar = "foo";

}
